objects/ASI_CRM_Credit_Debit_Note_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Credit/Debit Note Line Items</relationshipLabel>
        <relationshipName>Credit_Debit_Note_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Account_Code__c</fullName>
        <description>Account Code for Prompt Payment System Generated Credit/Debit Note usage.</description>
        <formula>ASI_CRM_Business_Unit__c + &quot;.&quot; + 
ASI_CRM_Object_Account__c + 
IF ( 
	NOT(ISBLANK( ASI_CRM_Subsidary__c )),
	&quot;.&quot; + ASI_CRM_Subsidary__c,
	&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjusted_Difference__c</fullName>
        <formula>IF( 
ISBLANK( ASI_CRM_Actual_Amount__c ) ,	null, 
IF( 
ASI_CRM_Actual_Amount__c &gt;  ASI_CRM_Amount__c , ASI_CRM_Actual_Amount__c - ASI_CRM_Amount__c, null 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjusted Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Adjustment_Remark__c</fullName>
        <label>Adjustment Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Back_Rebate_per_Bottle__c</fullName>
        <label>Back Rebate per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Business_Unit__c</fullName>
        <formula>IF ( 
	CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_SG_Prompt&quot;), 
	&quot;7771P&quot; +  ASI_CRM_Sub_brand__r.ASI_MFM_Sub_brand_Code__c + &quot;SG.5250.PPD&quot;,
	IF (
		CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_SG_Manual&quot;),
		&quot;777&quot; +  IF(ASI_CRM_A_C_Code__r.ASI_CRM_A_C_Code_Type__c = &quot;BS&quot;,&quot;9&quot;,ASI_CRM_Credit_Debit_Note__r.ASI_CRM_DF_DP__c) +  
		CASE(ASI_CRM_A_C_Code__r.ASI_CRM_A_C_Code_Type__c, &quot;BS&quot;, &quot;0&quot;, &quot;DF&quot;, &quot;P&quot;,&quot;D&quot;) +
		CASE(ASI_CRM_A_C_Code__r.ASI_CRM_A_C_Code_Type__c, &quot;BS&quot;, &quot;000&quot;, &quot;DF&quot;,ASI_CRM_Sub_brand__r.ASI_MFM_Sub_brand_Code__c , MID(ASI_CRM_Credit_Debit_Note__r.Owner:User.ASI_TnE_Department_Code__c , 6, 3)) +  
		ASI_CRM_Credit_Debit_Note__r.ASI_CRM_Location__c,
		&quot;ERROR&quot;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Consumer_Price_Offer_per_Bottle__c</fullName>
        <label>Consumer Price Offer per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contracted_Rate_9L__c</fullName>
        <label>Contracted Rate (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contracted_Rate_Bottle__c</fullName>
        <label>Comp. for WS – Price Diff. per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Credit_Debit_Note__c</fullName>
        <label>Credit/Debit Note</label>
        <referenceTo>ASI_CRM_Credit_Debit_Note__c</referenceTo>
        <relationshipLabel>Credit/Debit Note Line Items</relationshipLabel>
        <relationshipName>Credit_Debit_Note_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Credit/Debit Note Line Items</relationshipLabel>
        <relationshipName>Credit_Debit_Note_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Object_Account__c</fullName>
        <formula>IF ( 
	CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_SG_Prompt&quot;), 
	&quot;5250&quot;,
	IF (
		CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_SG_Manual&quot;),
		ASI_CRM_A_C_Code__r.ASI_MFM_A_C_Code__c,
		&quot;ERROR&quot;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Object Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Offtake_Qty_Sign__c</fullName>
        <label>Offtake Qty Sign</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PRS_WS_Price_per_Bottle__c</fullName>
        <label>PRS-WS Price per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>ASI_MFM_SKU_Code__c</referenceTo>
        <relationshipLabel>Credit/Debit Note Line Items</relationshipLabel>
        <relationshipName>Credit_Debit_Note_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>Credit/Debit Note Line Items</relationshipLabel>
        <relationshipName>Credit_Debit_Note_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Subsidary__c</fullName>
        <formula>IF ( 
	CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_SG_Prompt&quot;), 
	&quot;PPD&quot;,
	IF (
		CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_SG_Manual&quot;),
		 ASI_CRM_A_C_Code__r.ASI_CRM_Subsidary__c,
		&quot;ERROR&quot;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subsidary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Margin</fullName>
                </value>
                <value>
                    <fullName>Prompt Payment</fullName>
                </value>
                <value>
                    <fullName>Back Rebate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_9L__c</fullName>
        <label>Volume (9L)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Volume_Bottle__c</fullName>
        <label>Offtake Qty (Bottle)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_WS_OT_Price_per_Bottle__c</fullName>
        <label>WS-OT Price per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler_Rate_9L__c</fullName>
        <label>Wholesaler Rate (9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler_Rate_Bottle__c</fullName>
        <label>Wholesaler Rate per Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Credit/Debit Note Line Item</label>
    <nameField>
        <displayFormat>CNI{00000}</displayFormat>
        <label>Credit/Debit Note Line Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit/Debit Note Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_SG_Back_Rebate_Credit_Note_Line_Item</fullName>
        <active>true</active>
        <label>SG Back Rebate Credit Note Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Back_Rebate_Debit_Note_Line_Item</fullName>
        <active>true</active>
        <label>SG Back Rebate Debit Note Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Contract_Margin_Credit_Note_Line_Item</fullName>
        <active>true</active>
        <label>SG Contract Margin Credit Note Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Contract_Margin_Debit_Note_Line_Item</fullName>
        <active>true</active>
        <label>SG Contract Margin Debit Note Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Manual_CD_Note_Line_Item</fullName>
        <active>true</active>
        <label>SG Manual CD Note Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Prompt_Payment_Credit_Note_Line_Item</fullName>
        <active>true</active>
        <label>SG Prompt Payment Credit Note Line Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Prompt_Payment_Debit_Note_Line_Item</fullName>
        <active>true</active>
        <label>SG Prompt Payment Debit Note Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_SG_BackRebate_BlockGiveMore</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
  OR(
    RecordType.DeveloperName = &apos;ASI_CRM_SG_Back_Rebate_Credit_Note_Line_Item&apos;,
    RecordType.DeveloperName = &apos;ASI_CRM_SG_Back_Rebate_Debit_Note_Line_Item&apos;
  ), 
   ASI_CRM_Credit_Debit_Note__r.ASI_CRM_SYS_System_Generated__c , 
  ISPICKVAL( ASI_CRM_Type__c , &apos;Back Rebate&apos;), 
  ASI_CRM_Actual_Amount__c &gt; ASI_CRM_Amount__c 
)</errorConditionFormula>
        <errorMessage>Actual Amount must be less than or equal to the computed amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_BackRebate_BlockNegative</fullName>
        <active>false</active>
        <errorConditionFormula>AND ( 
  OR(
    RecordType.DeveloperName = &apos;ASI_CRM_SG_Back_Rebate_Credit_Note_Line_Item&apos;,
    RecordType.DeveloperName = &apos;ASI_CRM_SG_Back_Rebate_Debit_Note_Line_Item&apos;
  ), 
   ASI_CRM_Credit_Debit_Note__r.ASI_CRM_SYS_System_Generated__c , 
  ISPICKVAL( ASI_CRM_Type__c , &apos;Back Rebate&apos;), 
  OR ( 
      ISBLANK( ASI_CRM_Actual_Amount__c ) , 
      ASI_CRM_Actual_Amount__c &lt; 0 
  ) 
)</errorConditionFormula>
        <errorMessage>Actual Amount must be greater than or equal to $0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_ContractMargin_BlockNegative</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
  OR(
    RecordType.DeveloperName = &apos;ASI_CRM_SG_Contract_Margin_Credit_Note_Line_Item&apos;,
    RecordType.DeveloperName = &apos;ASI_CRM_SG_Contract_Margin_Debit_Note_Line_Item&apos;
  ), 
   ASI_CRM_Credit_Debit_Note__r.ASI_CRM_SYS_System_Generated__c , 
  ISPICKVAL( ASI_CRM_Type__c , &apos;Contract Margin&apos;), 
  OR ( 
      ISBLANK( ASI_CRM_Actual_Amount__c ) , 
      ASI_CRM_Actual_Amount__c &lt; 0 
  ) 
)</errorConditionFormula>
        <errorMessage>Actual Amount must be greater than or equal to $0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_ContractMargin_Remarks</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
  OR(
    RecordType.DeveloperName = &apos;ASI_CRM_SG_Back_Rebate_Credit_Note_Line_Item&apos;, 
    RecordType.DeveloperName = &apos;ASI_CRM_SG_Back_Rebate_Debit_Note_Line_Item&apos;
  ),
  ASI_CRM_Credit_Debit_Note__r.ASI_CRM_SYS_System_Generated__c , 
  ISPICKVAL(ASI_CRM_Type__c , &apos;Back Rebate&apos;), 
  ASI_CRM_Amount__c != ASI_CRM_Actual_Amount__c, 
  ISBLANK(ASI_CRM_Adjustment_Remark__c) 
)</errorConditionFormula>
        <errorMessage>Please input Remark if you have adjustment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_ManualCNote_DeptCodeMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
RecordType.DeveloperName = &apos;ASI_CRM_SG_Manual_CD_Note_Line_Item&apos;, 
ASI_CRM_A_C_Code__r.ASI_CRM_A_C_Code_Type__c = &quot;DP&quot;, 
ISBLANK(  ASI_CRM_Credit_Debit_Note__r.Owner:User.ASI_TnE_Department_Code__c  ) 
)</errorConditionFormula>
        <errorMessage>Please setup TnE Department Code for owner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_ManualCNote_SubBrandMandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
RecordType.DeveloperName = &apos;ASI_CRM_SG_Manual_CD_Note_Line_Item&apos;,   
ASI_CRM_A_C_Code__r.ASI_CRM_A_C_Code_Type__c = &quot;DF&quot;, 
ISBLANK( ASI_CRM_Sub_brand__c ) 
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Sub_brand__c</errorDisplayField>
        <errorMessage>Please select Sub Brand for Account Code start with 4 or 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_PromptPayment_BlockNegative</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
OR( 
RecordType.DeveloperName = &apos;ASI_CRM_SG_Prompt_Payment_Credit_Note_Line_Item&apos;, 
RecordType.DeveloperName = &apos;ASI_CRM_SG_Prompt_Payment_Debit_Note_Line_Item&apos; 
), 
ASI_CRM_Credit_Debit_Note__r.ASI_CRM_SYS_System_Generated__c , 
ISPICKVAL( ASI_CRM_Type__c , &apos;Prompt Payment&apos;), 
OR ( 
ISBLANK( ASI_CRM_Actual_Amount__c ) , 
ASI_CRM_Actual_Amount__c &lt; 0 
) 
)</errorConditionFormula>
        <errorMessage>Actual Amount must be greater than or equal to $0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_SG_PromptPayment_Remarks</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
OR( 
RecordType.DeveloperName = &apos;ASI_CRM_SG_Prompt_Payment_Credit_Note_Line_Item&apos;, 
RecordType.DeveloperName = &apos;ASI_CRM_SG_Prompt_Payment_Debit_Note_Line_Item&apos; 
), 
ASI_CRM_Credit_Debit_Note__r.ASI_CRM_SYS_System_Generated__c , 
ISPICKVAL(ASI_CRM_Type__c , &apos;Prompt Payment&apos;), 
ASI_CRM_Amount__c != ASI_CRM_Actual_Amount__c, 
ISBLANK(ASI_CRM_Adjustment_Remark__c) 
)</errorConditionFormula>
        <errorMessage>Please input Remark if you have adjustment.</errorMessage>
    </validationRules>
</CustomObject>